# mypystub

./: .gitignore  CHANGELOG  LICENSE  README.md  README.rst  deploy.sh  generate_icons.py  pyproject.toml
src/: launcher
src/mypystub/: __main__.py  app.py  hooks.py  launcher.py  piplike.py  settings.py  ui.py
src/mypystub/resources/templates/: config.toml  help.md
