[project]
name = "MyPyStub"
description = "My first application for prototyping with iDevices and Python"
dependencies = [
    "markdown",
    "requests",
    "resolvelib",
    "tomlkit",
    "unearth",
]

[tool.stub_launcher]
display_name = "Launcher"  # Overrides the folder/project name in the list
entry_point = "src/launcher/__main__.py"          # The script file the launcher should execute
icon = "assets/custom_icon.png"       # Relative path to this prototype's icon

# This project was generated with 0.4.2 using template: https://github.com/beeware/briefcase-template @ v0.4.2
[tool.briefcase]
project_name = "MyPyStub"
bundle = "au.id.jking"
version = "0.0.1"
url = "https://github.com/jkingok/mypystub"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
author = "Joshua King"
author_email = "jkingok@users.noreply.github.com"

[tool.briefcase.app.mypystub]
formal_name = "MyPyStub"
description = "My first application for prototyping with iDevices and Python"
long_description = """More details about the app should go here.
"""
sources = [
    "src/mypystub",
]
test_sources = [
    "tests",
]

requires = [
    "markdown",
    "requests",
    "resolvelib",
    "tomlkit",
    "unearth",
]
test_requires = [
    "pytest",
]
icon="assets/icon"
splash_background_color="#000000"

[tool.briefcase.app.mypystub.macOS]
universal_build = true
requires = [
    "toga-cocoa~=0.5.0",
    "std-nslog~=1.0.3",
]

[tool.briefcase.app.mypystub.linux]
requires = [
    "toga-gtk~=0.5.0",
    # PyGObject 3.52.1 enforces a requirement on libgirepository-2.0-dev. This library
    # isn't available on Debian 12/Ubuntu 22.04. If you don't need to support those (or
    # older) releases, you can remove this version pin. See beeware/toga#3143.
    "pygobject < 3.52.1",
]

[tool.briefcase.app.mypystub.linux.system.debian]
system_requires = [
    # Needed to compile pycairo wheel
    "libcairo2-dev",
    # One of the following two packages are needed to compile PyGObject wheel. If you
    # remove the pygobject pin in the requires list, you should also change to the
    # version 2.0 of the girepository library. See beeware/toga#3143.
    "libgirepository1.0-dev",
    # "libgirepository-2.0-dev",
]

system_runtime_requires = [
    # Needed to provide GTK and its GI bindings
    "gir1.2-gtk-3.0",
    # One of the following two packages are needed to use PyGObject at runtime. If you
    # remove the pygobject pin in the requires list, you should also change to the
    # version 2.0 of the girepository library. See beeware/toga#3143.
    "libgirepository-1.0-1",
    # "libgirepository-2.0-0",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3-module",
    # Needed to provide WebKit2 at runtime
    # Note: Debian 11 requires gir1.2-webkit2-4.0 instead
    # "gir1.2-webkit2-4.1",
]

[tool.briefcase.app.mypystub.linux.system.rhel]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
]

system_runtime_requires = [
    # Needed to support Python bindings to GTK
    "gobject-introspection",
    # Needed to provide GTK
    "gtk3",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3",
    # Needed to provide WebKit2 at runtime
    # "webkit2gtk3",
]

[tool.briefcase.app.mypystub.linux.system.suse]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
]

system_runtime_requires = [
    # Needed to provide GTK
    "gtk3",
    # Needed to support Python bindings to GTK
    "gobject-introspection", "typelib(Gtk) = 3.0",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3-module",
    # Needed to provide WebKit2 at runtime
    # "libwebkit2gtk3", "typelib(WebKit2)",
]

[tool.briefcase.app.mypystub.linux.system.arch]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo",
    # Needed to compile PyGObject wheel
    "gobject-introspection",
    # Runtime dependencies that need to exist so that the
    # Arch package passes final validation.
    # Needed to provide GTK
    "gtk3",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
    # Needed to provide WebKit2
    # "webkit2gtk",
]

system_runtime_requires = [
    # Needed to provide GTK
    "gtk3",
    # Needed to provide PyGObject bindings
    "gobject-introspection-runtime",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
    # Needed to provide WebKit2 at runtime
    # "webkit2gtk",
]

[tool.briefcase.app.mypystub.linux.appimage]
manylinux = "manylinux_2_28"

system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
    # Needed to provide GTK
    "gtk3-devel",
    # Dependencies that GTK looks for at runtime, that need to be
    # in the build environment to be picked up by linuxdeploy
    "libcanberra-gtk3",
    "PackageKit-gtk3-module",
    "gvfs-client",
]

linuxdeploy_plugins = [
    "DEPLOY_GTK_VERSION=3 gtk",
]

[tool.briefcase.app.mypystub.linux.flatpak]
flatpak_runtime = "org.gnome.Platform"
flatpak_runtime_version = "48"
flatpak_sdk = "org.gnome.Sdk"

[tool.briefcase.app.mypystub.windows]
requires = [
    "toga-winforms~=0.5.0",
]

# Mobile deployments
[tool.briefcase.app.mypystub.iOS]
requires = [
    "toga-iOS~=0.5.0",
    "std-nslog~=1.0.3",
]

#[tool.briefcase.app.mypystub.iOS.app]
# Enable the Files app directory for your app
info."UIFileSharingEnabled" = true

# Allow opening documents in place
info."LSSupportsOpeningDocumentsInPlace" = true

[tool.briefcase.app.mypystub.android]
requires = [
    "toga-android~=0.5.0",
]

base_theme = "Theme.MaterialComponents.Light.DarkActionBar"

build_gradle_dependencies = [
    "com.google.android.material:material:1.13.0",
    # Needed for DetailedList
    # "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
    # Needed for MapView
    # "org.osmdroid:osmdroid-android:6.1.20",
    # Needed for WebView
    # "androidx.webkit:webkit:1.15.0",
]

# Needed for WebView
# build_gradle_extra_content="""
# chaquopy.defaultConfig.staticProxy("toga_android.widgets.internal.webview")
# """

# Web deployments
[tool.briefcase.app.mypystub.web]
requires = [
    "toga-web~=0.5.0",
]
